fixing text wrapping in battle table

--- a/src/app/components/dashboard/tables/scholar-more-info/scholar-more-info.component.scss
+++ b/src/app/components/dashboard/tables/scholar-more-info/scholar-more-info.component.scss
@@ -16,3 +16,10 @@
 :host {
   width: 100%;
 }
+
+
+.battles-table {
+  td {
+    word-break: normal;
+  }
+}
